--- a/styles.scss
+++ b/styles.scss
@@ -46,8 +46,8 @@
 
 .instructions {
   margin: 60px auto;
-  width: 70%;
-  font-size: 14px;
+  width: 75%;
+  font-size: 15px;
   text-align: center;
   font-weight: 400;
   line-height: 1.4;
@@ -63,12 +63,12 @@
     display: block;
     color: white;
     border: 1px solid rgba(0, 0, 0, 0);
-    border-radius: 5px;
+    border-radius: 7px;
     box-shadow: 5px 4px 14px 0px rgba(0, 0, 0, 0.14);
     background-image: linear-gradient(
         -90deg,
         rgba(0, 0, 0, 0),
-        rgba(0, 0, 0, 0.5)
+        rgba(0, 0, 0, 0.6)
       ),
       url(/img/mobile/1.jpg);
 
@@ -76,18 +76,18 @@
     background-position: center;
 
     .card-heading {
-      font-size: 26px;
+      font-size: 28px;
       font-weight: 500;
     }
 
     .card-writer {
-      margin-top: 4px;
-      font-size: 16px;
+      margin-top: 6px;
+      font-size: 15px;
     }
 
     .card-text {
       //   border: 1px solid magenta;
-      margin: 29px 0 14px 15px;
+      margin: 45px 0 20px 15px;
       font-weight: 300;
     }
   }
@@ -144,7 +144,16 @@
   margin-bottom: 30vh;
 }
 
-span{
-    display: block;
-    margin-bottom: 20px;
+span {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.card:nth-child(2) {
+  background-image: linear-gradient(
+      -90deg,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url(/img/mobile/2.jpg);
 }
