--- a/styles.scss
+++ b/styles.scss
@@ -101,7 +101,7 @@
       rgba(0, 0, 0, 0.089),
       rgba(0, 0, 0, 0.527)
     ),
-    url(/img/IMG_5470.JPG);
+    url(/img/1.JPG);
   background-size: cover;
   background-position: center;
 
@@ -147,13 +147,4 @@
 span {
   display: block;
   margin-bottom: 20px;
-}
-
-.card:nth-child(2) {
-  background-image: linear-gradient(
-      -90deg,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0.6)
-    ),
-    url(/img/mobile/2.jpg);
 }
