--- a/styles.scss
+++ b/styles.scss
@@ -15,7 +15,7 @@
       rgba(0, 0, 0, 0),
       rgba(0, 0, 0, 0.5)
     ),
-    url(/img/IMG_1008.JPG);
+    url(/img/4.JPG);
 
   background-size: cover;
   background-position: center;
