--- a/styles.scss
+++ b/styles.scss
@@ -15,7 +15,7 @@
       rgba(0, 0, 0, 0),
       rgba(0, 0, 0, 0.5)
     ),
-    url(/img/4.JPG);
+    url(/img/5.JPG);
 
   background-size: cover;
   background-position: center;
@@ -67,8 +67,8 @@
     box-shadow: 5px 4px 14px 0px rgba(0, 0, 0, 0.14);
     background-image: linear-gradient(
         -90deg,
-        rgba(0, 0, 0, 0),
-        rgba(0, 0, 0, 0.6)
+        rgba(0, 0, 0, 0.164),
+        rgba(0, 0, 0, 0.692)
       ),
       url(/img/mobile/1.jpg);
 
@@ -81,13 +81,13 @@
     }
 
     .card-writer {
-      margin-top: 6px;
+      margin-top: 8px;
       font-size: 15px;
     }
 
     .card-text {
       //   border: 1px solid magenta;
-      margin: 45px 0 20px 15px;
+      margin: 55px 0 20px 20px;
       font-weight: 300;
     }
   }
@@ -147,4 +147,11 @@
 span {
   display: block;
   margin-bottom: 20px;
+}
+
+bold{
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 60px;
+  display: block;
 }
