--- a/styles.css
+++ b/styles.css
@@ -100,9 +100,10 @@
 }
 
 .article-head .article-heading {
-  font-size: 32px;
-  font-weight: 500;
-  padding-bottom: 10px;
+  font-size: 38px;
+  font-weight: 600;
+  padding-bottom: 15px;
+  margin: 0 auto;
 }
 
 .article-head .article-writer {
@@ -117,10 +118,12 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.6;
   letter-spacing: 0em;
   text-align: left;
-  margin-bottom: 30vh;
+  padding-bottom: 7vh;
+  margin-bottom: 5vh;
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.253);
 }
 
 span {
