--- a/styles.scss
+++ b/styles.scss
@@ -118,9 +118,12 @@
   }
 
   .article-heading {
-    font-size: 32px;
-    font-weight: 500;
-    padding-bottom: 10px;
+    font-size: 38px;
+    font-weight: 600;
+    padding-bottom: 15px;
+    // width: 97%;
+    
+    margin: 0 auto;
   }
 
   .article-writer {
@@ -137,11 +140,13 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 1.6;
   letter-spacing: 0em;
   text-align: left;
 
-  margin-bottom: 30vh;
+  padding-bottom: 7vh;
+  margin-bottom: 5vh;
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.253);
 }
 
 span {
