--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 
 .opening .holder {
   width: 70%;
-  text-align: center;
+  text-align: left;
   padding-top: 45vh;
 }
 
@@ -28,7 +28,8 @@
 
 .opening .birthday-heading {
   font-weight: 500;
-  font-size: 27px;
+  font-size: 40px;
+  line-height: 1.3;
   border-bottom: 0.5px solid white;
 }
 
@@ -49,17 +50,18 @@
 .cards-holder {
   width: 90%;
   margin: 0 auto;
+  margin-bottom: 15vh;
 }
 
 .cards-holder .card {
   text-decoration: none;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   display: block;
   color: white;
   border: 1px solid rgba(0, 0, 0, 0);
   border-radius: 7px;
-  -webkit-box-shadow: 5px 4px 14px 0px rgba(0, 0, 0, 0.14);
-          box-shadow: 5px 4px 14px 0px rgba(0, 0, 0, 0.14);
+  -webkit-box-shadow: 10px 10px 15px -10px rgba(0, 0, 0, 0.685);
+          box-shadow: 10px 10px 15px -10px rgba(0, 0, 0, 0.685);
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(0, 0, 0, 0.164)), to(rgba(0, 0, 0, 0.692))), url(/img/mobile/1.jpg);
   background-image: linear-gradient(-90deg, rgba(0, 0, 0, 0.164), rgba(0, 0, 0, 0.692)), url(/img/mobile/1.jpg);
   background-size: cover;
@@ -239,5 +241,20 @@ bold {
 #smita {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(rgba(0, 0, 0, 0.089)), to(rgba(0, 0, 0, 0.527))), url(/img/14.jpg);
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.089), rgba(0, 0, 0, 0.527)), url(/img/14.jpg);
+}
+
+#sandeep {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(rgba(0, 0, 0, 0.089)), to(rgba(0, 0, 0, 0.527))), url(/img/4.jpg);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.089), rgba(0, 0, 0, 0.527)), url(/img/4.jpg);
+}
+
+#anita {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(rgba(0, 0, 0, 0.089)), to(rgba(0, 0, 0, 0.527))), url(/img/1.jpg);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.089), rgba(0, 0, 0, 0.527)), url(/img/1.jpg);
+}
+
+#avinash {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), color-stop(rgba(0, 0, 0, 0.089)), to(rgba(0, 0, 0, 0.527))), url(/img/3.jpg);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.089), rgba(0, 0, 0, 0.527)), url(/img/3.jpg);
 }
 /*# sourceMappingURL=styles.css.map */
