--- a/styles.scss
+++ b/styles.scss
@@ -22,7 +22,7 @@
 
   .holder {
     width: 70%;
-    text-align: center;
+    text-align: left;
     padding-top: 45vh;
   }
 
@@ -33,8 +33,8 @@
 
   .birthday-heading {
     font-weight: 500;
-    font-size: 27px;
-
+    font-size: 40px;
+    line-height: 1.3;
     border-bottom: 0.5px solid white;
   }
 
@@ -56,15 +56,15 @@
 .cards-holder {
   width: 90%;
   margin: 0 auto;
-
+  margin-bottom: 15vh;
   .card {
     text-decoration: none;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     display: block;
     color: white;
     border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 7px;
-    box-shadow: 5px 4px 14px 0px rgba(0, 0, 0, 0.14);
+    box-shadow: 10px 10px 15px -10px rgba(0, 0, 0, 0.685);
     background-image: linear-gradient(
         -90deg,
         rgba(0, 0, 0, 0.164),
@@ -383,4 +383,35 @@ bold {
       rgba(0, 0, 0, 0.527)
     ),
     url(/img/14.jpg);
+}
+
+#sandeep {
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.089),
+      rgba(0, 0, 0, 0.527)
+    ),
+    url(/img/4.jpg);
+}
+
+
+#anita {
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.089),
+      rgba(0, 0, 0, 0.527)
+    ),
+    url(/img/1.jpg);
+}
+
+#avinash {
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.089),
+      rgba(0, 0, 0, 0.527)
+    ),
+    url(/img/3.jpg);
 }
