--- a/styles.scss
+++ b/styles.scss
@@ -415,3 +415,13 @@ bold {
     ),
     url(/img/3.jpg);
 }
+
+#mahendra {
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.089),
+      rgba(0, 0, 0, 0.527)
+    ),
+    url(/img/7.jpg);
+}
